Update calendar script to use Google Calendar API instead of Fantastical+Applescript

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "hubot": ">= 2.4.6",
-    "applescript": ">=0.2.1",
+    "googleapis": "latest",
     "nodemailer": "latest"
   },
   "engine": "node >= 0.8.x"
